<resources>
    <string name="app_name">MAD-Project-1</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="chnage_order">Change Order</string>
    <string name="buy_now">BUY NOW</string>
    <string name="order_id">Order ID : </string>
    <string name="change_order">Change Your Order</string>
    <string name="change_order_btn">Change Order</string>
    <string name="notification_settings">Notification Settings</string>

    <string-array name="cloth_size">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>

    <string-array name="cloth_quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>


    <string name="bags_title">Bags</string>
    <string name="price_title">LKR 1000.00</string>
    <string name="frocks_title">Frocks</string>
    <string name="trousers_title">Trousers</string>
    <string name="shoes_title">Shoes</string>
    <string name="tshirt_title">T-Shirts</string>
    <string name="jewellery_title">Jewellery</string>
    <string name="add_item_icon">Upload New Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_URL">Image URL</string>
    <string name="item_code">Item Code</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="size">Available Sizes</string>
    <string name="update_items_title">Update Item Details</string>
    <string name="update_items_btn">UPDATE DETAILS</string>
    <string name="notification_title">Notification Settings</string>
    <string name="orders">Orders</string>
    <string name="vouchers">Vouchers</string>
    <string name="others">Others</string>
    <string name="notification_text">Turn off the buttons to disable your notification</string>
    <string name="buyNow_title">Buy Now</string>
    <string name="b_name">Your Name</string>
    <string name="b_address">Address</string>
    <string name="b_Province">Province</string>
    <string name="b_postal_code">Postal Code</string>
    <string name="b_item_code">Item Code</string>
    <string name="b_size">Size</string>
    <string name="b_quantity">Quantity</string>
    <string name="b_phone_Number">Phone Number</string>
    <string name="buy_noe_btn">PLACE YOUR ORDER</string>
    <string name="change_order_title">Change Your Order</string>
    <string name="change_order_b">CHANGE ORDER</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="more_service">More Service</string>
    <string name="notifications">Notification Settings</string>
    <string name="contact">Contact Us</string>
    <string name="cart_title">Cart</string>
    <string name="quantity">Quantity</string>

    <string name="welcome_sing">SIGN IN</string>

    <string name="welcome_back">Welcome Back</string>
    <string name="no_account">No Account ?</string>
    <string name="reg">Register</string>
    <string name="pas">PASSWORD</string>
    <string name="text81_email">EMAIL</string>
    <string name="text82">SIGN IN</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="sign_in_to_continue">Sign In To Continue</string>

    <string name="privacy">Privacy Policy</string>
    <string name="text34">We at Honey Bee (“we”, or “us”) recognize the importance of privacy and confidentiality of personal information. HoneyBee.com (“Honey Bee” or, the “Platform”) is a business to consumer (or “B2C”) platform which connects and facilitates sales and purchases between business sellers (or “Sellers”) and consumer buyers (or “Buyers”).</string>
    <string name="text35">This Privacy Policy sets out the ways in which we collect, use and disclose information in connection with the operation of the Platform, including personal information about you, Platform users, visitors and representatives. This Privacy Policy also applies to use of the Platform via your mobile device.</string>

    <string name="tr_price1">LKR 2000.00</string>
    <string name="tr_price2">LKR 3700.00</string>
    <string name="tr_price3">LKR 3000.00</string>
    <string name="tr_price4">LKR 1950.00</string>

    <string name="tsh_price1">LKR 2100.00</string>
    <string name="tsh_price2">LKR 1700.00</string>
    <string name="tsh_price3">LKR 3250.00</string>
    <string name="tsh_price4">LKR 1350.00</string>

    <string name="shipping">Shipping Address</string>
    <string name="text36">H.K.Navodhya Yasisuru,</string>
    <string name="text37">21/B, Kandy Road, Kadawatha</string>
    <string name="text38">Western Province,Sri lanka</string>
    <string name="text39">Edit</string>


    <string name="about">About Us</string>
    <string name="honey_bee">HONEY BEE is an online fashion store</string>
    <string name="text01">which brings you unique and elegant designs</string>
    <string name="text02">to add a touch of glamour to your everyday</string>
    <string name="text03">life!!!</string>
    <string name="text04">Each month, HONEY BEE store will</string>
    <string name="text05">introduce a new style or collection, keeping</string>
    <string name="text06">up with current trends and fashion needs</string>
    <string name="text07">while preserving distinctive designs at all</string>
    <string name="text08">times.</string>
    <string name="text09">Our goal is to give zigzag consumers with</string>
    <string name="text10">a hassle-free online and physical shopping</string>
    <string name="text11">experience with a wide choice of items.</string>
    <string name="text12">We look forward to spoiling you with our</string>
    <string name="text13">stylish, high-quality items at reasonable</string>
    <string name="text14">prices.</string>
    <string name="text15">Our items are hand-picked by a team of</string>
    <string name="text16">talented designers who utilize them to convey</string>
    <string name="text17">the subtleties of their culture and society.</string>
    <string name="text18">Their enthusiasm is reflected in each of their</string>
    <string name="text19">designs and quality, which is based on strong</string>
    <string name="text20">strong.</string>

    <string name="get_in_touch">Get In Touch</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="you_want">You want to talk about</string>
    <string name="your_message">Your message</string>
    <string name="send">Send</string>

    <string name="text46">HONEY BEE</string>
    <string name="text47">_HONEY BEE spring sale has SPRUNG !_</string>
    <string name="text48">UP</string>
    <string name="text49">TO</string>
    <string name="text50">80% OFF</string>
    <string name="text51">Buy 3 Get</string>
    <string name="text52">20% OFF</string>
    <string name="text53">Shop Now</string>
    <string name="text54">Shop Now</string>
    <string name="text55">2 For</string>
    <string name="text56">S18</string>
    <string name="text57">🚚 Shipping Info</string>

    <string name="more_services">More Services</string>
    <string name="Vouchers">Vouchers</string>
    <string name="text21">LKR 200.00 OFF</string>
    <string name="text22">For orders over LKR 400.00</string>
    <string name="text23">Code : sheasia</string>
    <string name="text24">03/15/2022 - 04/14/2022</string>
    <string name="text25">LKR 400.00 OFF</string>
    <string name="text26">For orders over LKR 1000.00</string>
    <string name="text27">Code : 2378087</string>
    <string name="text28">03/15/2022 - 04/24/2022</string>
    <string name="text29">LKR 600.00 OFF</string>
    <string name="text30">For orders over LKR 1500.00</string>
    <string name="text31">Code : 2267812</string>
    <string name="text32">03/18/2022 - 05/18/2022</string>


    <string name="payment">Payment</string>
    <string name="card_num">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="text33">Cardholder Name</string>
    <string name="save_card">Save Card Details</string>
    <string name="pay">Pay</string>

</resources>

